spacing issue change

--- a/src/app/briefcase/briefcase.component.scss
+++ b/src/app/briefcase/briefcase.component.scss
@@ -14,7 +14,7 @@ ion-content {
         background-size      : contain;
         background-attachment: fixed;
         padding-right        : 100%;
-        padding-bottom       : calc(100vh - 56px);
+        padding-bottom       : calc(100vh - 76px);
         z-index              : 1;
         position             : absolute;
     }
